# shader-sculptor

./: CMakeLists.txt  README.md  compile_run_ss.bat  imgui.ini
data/: builtin_glsl_funcs.txt
glad/src/: glad.c
include/glad/: glad.h
src/: boilerplate_unlit_templates.txt  build_for_gl.cpp  main.cpp
src/graphics/: ga_cube_component.cpp  ga_cube_component.h  ga_material.cpp  ga_material.h  ga_program.cpp  ga_program.h  ga_texture.cpp  ga_texture.h
src/imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_opengl3_loader.h  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp  imstb_rectpack.h  imstb_truetype.h
src/math/: ga_mat2f.cpp  ga_mat2f.h  ga_mat3f.cpp  ga_mat3f.h  ga_mat4f.cpp  ga_mat4f.h  ga_math.h  ga_quatf.cpp  ga_quatf.h  ga_vec2f.cpp  ga_vec3f.cpp  ga_vec3f.h  ga_vec4f.cpp  ga_vec4f.h  ga_vecnf.h
src/ss/: ss_boilerplate.cpp  ss_boilerplate.hpp  ss_data.cpp  ss_data.h  ss_data.hpp  ss_graph.cpp  ss_graph.hpp  ss_node.cpp  ss_node.hpp  ss_node_factory.cpp  ss_node_factory.hpp  ss_node_types.h  ss_node_types.hpp  ss_parser.cpp  ss_parser.hpp  ss_pins.cpp  ss_pins.h  ss_pins.hpp
src/stbi/: stb_image.h
